fix gap bug

--- a/src/components/Faq/Faq.css
+++ b/src/components/Faq/Faq.css
@@ -47,5 +47,6 @@ color: #fff;
 @media only screen and (max-width: 992px) {
     .faq-container{
         flex-direction: column;
+        gap: 0;
     }
 }
